--- a/package.json
+++ b/package.json
@@ -7,8 +7,12 @@
   "devDependencies": {
     "ansi-colors": "^3.1.0",
     "gulp": "^3.9.1",
+    "gulp-clean-css": "^3.10.0",
     "gulp-less": "^4.0.1",
-    "gulp-newer": "^1.4.0"
+    "gulp-newer": "^1.4.0",
+    "gulp-postcss": "^8.0.0",
+    "gulp-rename": "^1.4.0",
+    "postcss-preset-env": "^6.1.1"
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
